# attendance-tracking-sys

./: README.md  package-lock.json  package.json
backend/: .env.example  README.md  pyproject.toml  seed1.py  seeds.py
backend/alembic/: env.py
backend/alembic/versions/: 29f4f23d7ca3_initial_schema.py  4b740e2e2e1b_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/models/: student.py  teacher.py
backend/app/repositories/: auth.py  student.py
backend/app/routes/: attendance.py  auth.py  dashboard.py  docs.py  reports.py  student_auth.py  students.py
backend/app/schemas/: auth.py  student.py
backend/app/services/: attendance.py  auth.py  dashboard.py
backend/app/utils/: jwt.py
docs/: Smart_Attendance_PRD.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AppLayout.tsx  Navbar.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Attendance.tsx  Dashboard.tsx  Login.tsx  MarkAttendance.tsx  Register.tsx  Reports.tsx  StudentDashboard.tsx  StudentDetail.tsx  StudentLogin.tsx  Students.tsx
frontend/src/services/: api.ts
