[project]
name = "attendance-tracking-sys-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.135.1",
    "passlib>=1.7.4",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
